[project]
name = "types-usd"
version = "24.5.2"

readme = "README.md"
authors = [{name="Chad Dombrova"}]
description = "Unofficial python stubs for Pixar's Universal Scene Description (USD)"
license = "MIT"

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Typing :: Stubs Only",
]
repository = "https://github.com/LumaPictures/cg-stubs"
homepage = "https://github.com/LumaPictures/cg-stubs"

keywords = ["3d", "graphics", "games", "VFX", "CG", "animation"]

[dependency-groups]
dev = [
    "stubgenlib",
    "PySide6==6.5.1.1",
    "mypy",  # this is here to make tool.uv.sources work
]

[tool.uv.sources]
stubgenlib = { path = "../common" , editable=true }
mypy = { git = "https://github.com/chadrik/mypy", branch = "stubgen/all-fixes-usd" }
#mypy = { path = "/Users/chad/dev/mypy", editable=true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["stubs/pxr-stubs", "stubs/Boost-stubs"]

[tool.hatch.build]
# uv+hatch does not write anything to the installed .pth file if the contents
# of the package do no include .py files.  Adding this ensures the .pth file
# is written correctly
dev-mode-dirs = ["stubs"]


[tool.mypy]
# adding the stubs directory is not necessary because we're using `uv run mypy`
# which adds a .pth file to the site-packcages directory
files = ["tests"]
python_version = "3.9"
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "PySide6.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "UsdSchemaExamples.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "pxr.Usdviewq.usdviewApi"
disable_error_code = "arg-type"
